test/variables/remote/no-static.good
no-static.chpl:1: In function 'f':
no-static.chpl:3: error: cannot create function-static remote variables
