test/variables/remote/no-static.chpl
proc f() {
  @functionStatic
  on Locales.last const x = 42;
}
